--- a/app/scss/pages/_mapa-reporte.scss
+++ b/app/scss/pages/_mapa-reporte.scss
@@ -51,7 +51,7 @@
     background-color: #E7F0FF;
     width: 32px;
     height: 32px;
-    min-width: 32px
+    min-width: 32px;
     border-radius: 20px;
     display: flex;
     align-items: center;
@@ -90,9 +90,9 @@
             border: 2px solid #86ECB9;
             font-size: 14px;
             color: #19CE74;
-        }
-        &::placeholder {
-            color: #19CE74;
+            &::placeholder {
+                color: #19CE74;
+            }
         }
     }
     .input-mediun {
