--- a/app/css/main-mobil.css
+++ b/app/css/main-mobil.css
@@ -6557,22 +6557,6 @@ body.page-mapa {
       flex-wrap: wrap;
   grid-gap: 16px;
   padding: 17px 0;
-  /*   &.mapa {
-        input {
-            border:1px solid red;
-            &:focus-visible, &:active {
-                border:2px solid orange;
-                outline: none;
-                border-color: $blue;
-                color:$blue;
-                background-color: #E7F0FF;
-                &::placeholder {
-                    color: $blue;
-                }
-            }
-        }
-
-    } */
 }
 .box-seleccion input {
   width: auto;
@@ -6585,15 +6569,6 @@ body.page-mapa {
   height: 44px;
   outline: none;
   cursor: pointer;
-  /* &.active {
-      background-color: #D2FFE9;
-      border: 2px solid #86ECB9;
-      font-size: 14px;
-      color: #19CE74;
-      &::placeholder {
-          color: #19CE74;
-      }
-  } */
 }
 .box-seleccion input.active {
   border: 2px solid orange;
@@ -6653,4 +6628,6 @@ body.page-mapa {
   top: 15px;
   left: 20px;
 }
+
+/* Mapa reporte - 5*/
 /*# sourceMappingURL=main-mobil.css.map */
