--- a/app/scss/pages/_mapa-reporte.scss
+++ b/app/scss/pages/_mapa-reporte.scss
@@ -100,16 +100,6 @@
                 color: $blue;
             }
         }
-       
-        /* &.active {
-            background-color: #D2FFE9;
-            border: 2px solid #86ECB9;
-            font-size: 14px;
-            color: #19CE74;
-            &::placeholder {
-                color: #19CE74;
-            }
-        } */
     }
     .input-mediun {
         width: 50%;
@@ -133,22 +123,6 @@
                 }
         }   }
     }
-  /*   &.mapa {
-        input {
-            border:1px solid red;
-            &:focus-visible, &:active {
-                border:2px solid orange;
-                outline: none;
-                border-color: $blue;
-                color:$blue;
-                background-color: #E7F0FF;
-                &::placeholder {
-                    color: $blue;
-                }
-            }
-        }
-        
-    } */
 }
 
 .forn-icon-file {
@@ -158,3 +132,5 @@
         left: 20px;
     }
 }
+
+/* Mapa reporte - 5*/
