--- a/app/scss/pages/_comprobante.scss
+++ b/app/scss/pages/_comprobante.scss
@@ -106,6 +106,10 @@
 .section-detalle-lectura {
     padding: 12px 14px 60px 14px;
 }
+
+.border-top {
+    border-top: 1px dashed #B7C0CE;
+}
 .border-bottom {
     border-bottom: 1px dashed #B7C0CE;
 }
