--- a/app/css/main-mobil.css
+++ b/app/css/main-mobil.css
@@ -6650,4 +6650,53 @@ body.page-mapa {
 }
 
 /* Mapa reporte - 5*/
+/* .page-requerimiento {
+    background-image: url(../images/page-requerimientos.jpg);
+    background-repeat: no-repeat;
+    background-position: 0 30px;
+} */
+.section-requerimiento {
+  padding-bottom: 50px;
+}
+
+.box-input-busqueda {
+  margin: 10px auto;
+}
+.box-input-busqueda .input-busqueda {
+  height: 50px;
+  background-color: white;
+  padding: 0.375rem 1rem;
+  font-size: 16px;
+  color: #B7C0CE;
+  border: none;
+}
+
+.btn-buscar {
+  color: #fff;
+  background-color: white;
+  padding: 0 20px;
+  border-left: 0;
+}
+
+.resultado-requerimiento {
+  margin: 20px 0;
+}
+
+.box-requerimiento {
+  color: #5F6268;
+  border: 2px solid #F3F4F5;
+  border-radius: 8px;
+  padding: 9px 19px 28px 19px;
+  margin-bottom: 16px;
+}
+.box-requerimiento .item-requerimiento {
+  margin-bottom: 17px;
+}
+.box-requerimiento .item-requerimiento .col-6:first-child {
+  text-align: left;
+  font-weight: bold;
+}
+.box-requerimiento .item-requerimiento .col-6:last-child {
+  text-align: right;
+}
 /*# sourceMappingURL=main-mobil.css.map */
