--- a/app/scss/components/_buttons.scss
+++ b/app/scss/components/_buttons.scss
@@ -271,3 +271,25 @@
         background: $blue;
     }
 }
+
+.btn-gray-light {
+    background-color: #B7C0CE;
+    border: 1px solid #B7C0CE;
+    box-sizing: border-box;
+    border-radius: 8px;
+    font-size: 16px;
+    color: white;
+    font-weight: bold;
+    padding:.5rem  1rem;
+}
+
+.btn-azul-dark {
+    background-color: $blue-dark;
+    border: 1px solid $blue-dark;
+    box-sizing: border-box;
+    border-radius: 8px;
+    font-size: 16px;
+    color: white;
+    font-weight: bold;
+    padding:.5rem  1rem;
+}
