--- a/app/scss/pages/_comprobante.scss
+++ b/app/scss/pages/_comprobante.scss
@@ -63,13 +63,9 @@
     }
 }
 
-.box-update-personal {
+.box-newsletter {
     margin: 20px 0;
     padding-bottom: 20px;
-}
-
-.input-group-info {
-    margin-bottom: 10px;
 }
 
 /* Page Error */
