--- a/app/scss/main-mobil.scss
+++ b/app/scss/main-mobil.scss
@@ -14,6 +14,7 @@
 @import 'components/buttons'; 
 @import 'components/badge'; 
 @import 'components/form'; 
+@import 'components/alert'; 
 
 // Sections
 @import 'sections/header';
