--- a/app/scss/main-mobil.scss
+++ b/app/scss/main-mobil.scss
@@ -15,6 +15,7 @@
 @import 'components/badge'; 
 @import 'components/form'; 
 @import 'components/alert'; 
+@import 'components/radiobox'; 
 
 // Sections
 @import 'sections/header';
